--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="123.ico">
+  <meta name="description" content="halo everyone">
+  <meta name="author" content="ssong081">
 
-  <title>John Doe - Business Administration</title>
+  <title>Simo Song - Smartest Person in the World</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Simo Song</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/simo song.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,35 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Simo Song
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">The Smartest Person📚</div>
+        <p class="lead mb-4">Compelling factors that lead to individuals incorporating new technologies, according to Diamond Every creator hopes that his or her community will embrace the new technology they have
+developed. For some inventions, acceptance takes a long time to come, while others are instantly rejected. The essay "Accepting and Rejecting Innovation" by Jared Diamond mainly talks about the three main factors, economic advantage, social prestige, and vested interest, which cause people to either accept or reject innovation. I share the same ideas with Diamond, but I have some other opinions on these ideas.
+Moreover, the first factor is the relative economic advantage when people compare it with the existing technology. Diamond thinks the new technology should offer people enough benefits to make the extra money worthwhile. Some societies do not have the natural resources or materials to support the innovation, so they will have to spend more money on the resource required for it. Some might say that technology nowadays is so well-developed that most new products change our life enough that it is worth spending extra money on it. However, the economic problem will always be a factor for people to consider. For example, Tesla developed self-driving technology, which is undoubtedly a considerable improvement in the car industry recently. Buying a Tesla with a self-driving system now is 15 thousand dollars more expensive than the normal one and 13 thousand dollars more expensive than it cost in 2019. As much as 46% of March 2019 Tesla purchasers paid the extra $2,000 to $3,000 for FSD (Full Self Driving), according to studies from "Troy Teslike," but that number has decreased to 7% globally now that the price is $15,000. As an added bonus, Tesla is the pioneer in the self-driving industry (Ju & Lee, 2021). No other company is doing this because they
+Song 1
+
+ Song 2 think it is not worth extra money. So no matter how developed we are, when a new technology
+cannot provide enough convenience, we will always come to the problem Diamond mentioned — economic advantage.
+Secondly, certain brands have widespread recognition and affluence among consumers, giving them an opportunity to improve their social standing by simply choosing to purchase such goods. According to Diamond, the social worth and prestige of the new technology may influence people's decisions about whether or not to adopt it. iPhones are universally recognized as the standard by which other cell phones are judged. Buying the latest version of the iPhone seems to be a trend, and when everyone around you is using this, it will seem out of place if you don't use it. There are many other brands of smartphones, such as SAMSUNG, some technologies that SAMSUNG phones have but iPhones do not—Infrared sensors. Infrared sensor is applied to most of our household appliance and public appliances, which means that we can use Android phones as remote control. Also, SAMSUNG recently developed a new technology— a folding screen phone. I know this information from my friend Ivan. Ivan showed great interest in the folding screen and searched a lot about it on the internet. But when I asked him, "If you are really interested in this phone and think it is amazing, why you don’t just buy one?" He shook his head and said, "Although it seems pretty awesome, it is still not an iPhone." According to Ivan, not buying iPhones seems to be an "outdated" choice. Back to Diamond's point that people will purchase famous brands and not the regular brand because of the outstanding label, so despite there being so much new and good technology of SAMSUNG, most people will still go for the iPhone because of the exceptional brand of its social prestige.
+In addition, the third factor Diamond mentions are compatibility with a vested interest. When companies or even countries invest lots of time, effort, and money, it will be a significant loss when an innovation causes those investments into nothing. Products in technology are designed to have
+<br><br>
 
         Enter bio here<br><br>
 
         Enter bio here
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://www.mammothmountain.com/?utm_source=google&utm_medium=paidsearch&utm_content=aa18563277182-cc655067100602&utm_keyword=&utm_campaign=MM_Trademark-Ong-ECM-SW_SEA_B_LW_EXM&gclid=EAIaIQobChMInb2X7YaF_wIVhefjBx02OA3aEAAYASAAEgI5A_D_BwE&gclsrc=aw.ds">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/simosong081">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://www.youtube.com/watch?v=_PhYRzNqIeo">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="https://mail.google.com/mail/u/0/#inbox">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -95,13 +104,13 @@
             <h3 class="mb-0">Developer</h3>
             <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • help with translating<br> 
+              • won math competation<br>
+              • Experience with coco chanel<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">June 2020 - Present</span>
           </div>
         </div>
 
@@ -152,11 +161,10 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Economic major</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
+            <span class="text-primary">August 2020 - present</span>
           </div>
         </div>
 
@@ -191,7 +199,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+             <img src="img/122.jpeg" width="500px">
+    <img src="img/1234.jpeg" width="500px"><br>
+    <img src="img/156.jpeg" width="500px">
+    <img src="img/145.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
